Attempt 2 at getting the share thumbnail working

--- a/src/app.html
+++ b/src/app.html
@@ -15,6 +15,11 @@
         <link rel="manifest" href="%sveltekit.assets%/site.webmanifest" />
 
         <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta property="og:image" content="%sveltekit.assets%/other-images/share-thumb.png" />
+        <meta property="og:image:alt" content="GE Skiller share thumbnail" />
+        <meta name="twitter:card" content="summary_large_image" />
+        <meta name="twitter:image" content="%sveltekit.assets%/other-images/share-thumb.png" />
+        <meta name="twitter:image:alt" content="GE Skiller share thumbnail" />
         %sveltekit.head%
     </head>
     <body data-sveltekit-preload-data="hover">
