Improve social share metadata for homepage

--- a/src/app.html
+++ b/src/app.html
@@ -15,11 +15,37 @@
         <link rel="manifest" href="%sveltekit.assets%/site.webmanifest" />
 
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <meta property="og:image" content="%sveltekit.assets%/other-images/share-thumb.png" />
-        <meta property="og:image:alt" content="GE Skiller share thumbnail" />
+        <title>GE Skiller: Find the Best OSRS Items to Craft & Profit</title>
+        <meta
+            name="description"
+            content="Find the best things to make using your skill levels, powered by real-time GE prices on GE Skiller."
+        />
+
+        <meta property="og:type" content="website" />
+        <meta property="og:site_name" content="GE Skiller" />
+        <meta property="og:title" content="GE Skiller: Find the Best OSRS Items to Craft & Profit" />
+        <meta
+            property="og:description"
+            content="Find the best things to make using your skill levels, powered by real-time GE prices on GE Skiller."
+        />
+        <meta property="og:url" content="https://ge-skiller.netlify.app/" />
+        <meta property="og:image" content="https://ge-skiller.netlify.app/other-images/share-thumb.png" />
+        <meta
+            property="og:image:alt"
+            content="GE Skiller. Find the best things to make using your skill levels. Powered by real-time GE prices."
+        />
+
         <meta name="twitter:card" content="summary_large_image" />
-        <meta name="twitter:image" content="%sveltekit.assets%/other-images/share-thumb.png" />
-        <meta name="twitter:image:alt" content="GE Skiller share thumbnail" />
+        <meta name="twitter:title" content="GE Skiller: Find the Best OSRS Items to Craft & Profit" />
+        <meta
+            name="twitter:description"
+            content="Find the best things to make using your skill levels, powered by real-time GE prices on GE Skiller."
+        />
+        <meta name="twitter:image" content="https://ge-skiller.netlify.app/other-images/share-thumb.png" />
+        <meta
+            name="twitter:image:alt"
+            content="GE Skiller. Find the best things to make using your skill levels. Powered by real-time GE prices."
+        />
         %sveltekit.head%
     </head>
     <body data-sveltekit-preload-data="hover">
